Fix line spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,8 +35,8 @@ a:hover {
 p {
   font-weight: normal;
   font-size: 1em;
-  line-height: 1.64em;
-  margin-bottom: 1.2em;
+  line-height: 1.6875em;
+  margin-bottom: 1.3em;
 }
 
 table {
